# gitlab-slurper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.adoc  README.md  _pyslurp.py  constants.py  exceptions.py  exporters.py  helper.py  post_install.py  pyslurp.py  renovate.json  requirements.txt  setup.cfg  setup.py  slurp.py  variable.py
configuration/: autoconfig.py  config_cli.py  config_installer.py  config_loader.py  config_manager.py
configuration/keys/: config_keys.py  gitlab.py  global_config.py
configuration/templates/: global_config.j2
configuration/templates/shell_wrappers/: bash.j2  fish.j2  zsh.j2
exporters/: ide.py  shell.py
sources/config/: config_handler.py
sources/gitlab/: cli.py  gitlab.py  gitlab_handler.py
src/pyslurp/: _pyslurp.py
src/pyslurp/configuration/: autoconfig.py  config_cli.py  config_manager.py  shell_wrapper.py
src/pyslurp/configuration/keys/: config_keys.py
src/pyslurp/configuration/templates/: .pyslurp.j2  global_config.j2
src/pyslurp/configuration/templates/shell_wrappers/: bash.j2  fish.j2  zsh.j2
src/pyslurp/exporters/: dotenv.py  ide.py  shell.py
src/pyslurp/sources/config/: config_handler.py
src/pyslurp/sources/gitlab/: cli.py  gitlab_handler.py
src/pyslurp/variables/: variable_container.py
variables/: variable_container.py
