[metadata]
name = PySlurp
version = 0.2.1

[options]
package_dir=
    =src
packages=find:

install_requires =
    click==8.1.3
    python-gitlab==2.10.1
    MarkupSafe==2.1.1
    Jinja2==3.1.2
    PyYAML==5.4.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
        _pyslurp = pyslurp._pyslurp:cli
